--- a/index.html
+++ b/index.html
@@ -1,2 +1,24 @@
-hello world
-<a href='/test/test.html'>test</a>
+<!DOCTYPE html>
+<html>
+<head>
+
+  <title>Home</title>
+
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+  
+  <link rel="stylesheet" href="/styles/style.css">
+</head>
+
+<body>
+    
+    
+
+  
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+</body>
+</html>
