--- a/resources/index.html
+++ b/resources/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>resources</title>
-    <link type="text/css" rel="stylesheet" href="/style.css">  
+    <link type="text/css" rel="stylesheet" href="./style.css">  
   </head>
 </html>
 <table style="width: 502px; margin: 0 auto;" dir="rtl" border="1" cellspacing="0" cellpadding="0" class="listDoctora"> 
