--- a/resources/index.html
+++ b/resources/index.html
@@ -111,7 +111,7 @@
     </table>
     
 
-    <p>
+    <p style="width: 502px; margin: 0 auto;">
             مهندسی کامپیوتر در مقطع کارشناسی ارشد دارای چهار گرایش زیر است:
       
       1ـ نرم‌افزار 2ـ سخت افزار (معماری کامپیوتر)، 3ـ هوش مصنوعی 4ـ الگوریتم و محاسبات
