--- a/resources/resources.html
+++ b/resources/resources.html
@@ -4,6 +4,7 @@
     <link type="text/css" rel="stylesheet" href="./style.css">  
   </head>
   <body>
+  <a href="./index.html">صفحه اصلی منابع</a>
     <table style="width: 502px; margin: 0 auto;" dir="rtl" border="1" cellspacing="0" cellpadding="0" class="listDoctora"> 
       <tbody> 
         <tr> 
