--- a/resources/index.html
+++ b/resources/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>صفحه اصلی منابع</title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet">
   </head>
   <body>
     <ul>
