--- a/resources/index.html
+++ b/resources/index.html
@@ -6,6 +6,12 @@
     <link href="./style.css" rel="stylesheet">
   </head>
   <body>
+    <nav>
+      <a href="http://www.aseds.github.io">
+        aseds.github.io
+      </a>
+    </nav>
+  
     <ul>
       <li>
         <a href="./resources.html">
