--- a/resources/index.html
+++ b/resources/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <nav>
-      <a href="http://www.aseds.github.io">
+      <a href="http://aseds.github.io">
         aseds.github.io
       </a>
     </nav>
