--- a/resources/index.html
+++ b/resources/index.html
@@ -14,6 +14,11 @@
   
     <ul>
       <li>
+        <a href="http://mahan.ac.ir/showpages/721/%D8%A8%D9%88%D8%AF%D8%AC%D9%87-%D8%A8%D9%86%D8%AF%DB%8C-%D9%88-%D9%85%D9%86%D8%A7%D8%A8%D8%B9-%D8%A2%D8%B2%D9%85%D9%88%D9%86%D9%87%D8%A7%DB%8C-%DA%A9%D8%A7%D8%B1%D8%B4%D9%86%D8%A7%D8%B3%DB%8C-%D8%A7%D8%B1%D8%B4%D8%AF--%D9%85%D9%87%D9%86%D8%AF%D8%B3%DB%8C-%DA%A9%D8%A7%D9%85%D9%BE%DB%8C%D9%88%D8%AA%D8%B1">
+          بودجه‌بندی و منابع آزمون‌های ارشد  - مهندسی‌کامپیوتر
+        </a>
+      </li>
+      <li>
         <a href="./resources.html">
           منابع و مباحث گرایش‌های مختلف
         </a>
