--- a/resources/index.html
+++ b/resources/index.html
@@ -90,6 +90,12 @@
         </a>
       </li>
       <li>کلاس حضوری مدرسان شریف، تلفن: 2966</li>
+      
+      <li>
+        <a href="http://mahan.ac.ir/showpages/385/%DA%A9%D8%A7%D8%B1%D8%B4%D9%86%D8%A7%D8%B3%DB%8C-%D8%A7%D8%B1%D8%B4%D8%AF-%D9%85%D9%87%D9%86%D8%AF%D8%B3%DB%8C-%DA%A9%D8%A7%D9%85%D9%BE%DB%8C%D9%88%D8%AA%D8%B1">
+          ماهان: اطلاعات در مورد دروس و گرایش های کنکور ارشد
+        </a>
+      </li>
     </ul>
 
   </body>
