--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<a href="/resources">resources</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>aseds</title>
+  </head>
+  <body>
+    <a href="/in3">in3</a>
+    <!-- <a href="/resources">resources</a> -->    
+  </body>
+</html>
