--- a/in3/index.html
+++ b/in3/index.html
@@ -1,1 +1,10 @@
-<a href="t1g1.html">
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>in3</title>
+  </head>
+  
+  <body>
+    <a href="t1g1.html">
+  </body>
+</html>
